k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
  namespace: dashboard-context
spec:
  type: ClusterIP
  selector:
    app: dashboard-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
